2007-12-15  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Removed any GtkTable that contained a GtkComboBox because the size of
		the combo box was not constrained properly.  This sacrifices the nice
		orderly labels for combo boxes that don't extend beyond the edge of the
		window.

2007-12-15  Jim Evins  <evins@snaught.com>

	* libglabels/db.c: (lgl_db_lookup_template_from_name):
	* src/object-editor.c: (gl_object_editor_finalize):
	* src/wdgt-media-select.c: (gl_wdgt_media_select_finalize):
		Fixed several small memory leaks.

2007-12-14  Jim Evins  <evins@snaught.com>

	* libglabels/db.c:
		Optimize template search by name by using a GHashTable.
	* src/mini-preview-pixbuf-cache.c:
	* src/mini-preview-pixbuf-cache.h:
		Store one pixbuf per template, but use a key for each alias.
	* src/wdgt-media-select.c:
		Optimize loading of tree data, thus optimizing the "new label" dialog.

2007-12-12  Jim Evins  <evins@snaught.com>

	* data/templates/avery-us-templates.xml:
		More templates and aliases.

2007-12-08  Jim Evins  <evins@snaught.com>

	* TODO:
		More prep for 2.1.5/2.2.0.

2007-12-08  Jim Evins  <evins@snaught.com>

	* NEWS:
	* README:
	* TODO:
	* configure.in:
		Preparation for 2.1.5.

2007-12-08  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/db.sgml:
	* docs/libglabels/tmpl/str.sgml:
	* libglabels/str.c:
		Documentation cleanup for libglabels.

2007-11-29  Jim Evins  <evins@snaught.com>

	* libglabels/db.h:
	* libglabels/db.c:
		Added lgl_db_does_template_name_exist().
		In lgl_db_lookup_template_from_name() substitute brand/part of new template from
		requested alias.
	* src/prefs-model.c:
		Proof read recent templates -- make sure they still exist.
	* src/wdgt-media-select.c:
		Default to "search all templates" tab if no recent templates found.
